<resources>
    <string name="app_name">Fotilo</string>
    <string name="client">&#xe614;</string>
    <string name="server">&#xe726;</string>
    <string name="input">&#xe626;</string>
    <string name="output">&#xe6bd;</string>
    <string name="qrcode">&#xf010a;</string>
    <string name="nfc">&#xe6e2;</string>
    <string name="pc">&#xe665;</string>
    <string name="folder">&#xec17;</string>
    <string name="cancelLink">&#xe65e;</string>
    <string name="link">&#xe612;</string>
    <string name="start">&#xe642;</string>
    <string name="end">&#xea6f;</string>
    <string name="phone">&#xeb4d;</string>
    <string name="circle">&#xe6d0;</string>
    <string name="record">&#xe60a;</string>
    <string name="bluetooth">&#xeb63;</string>
    <string name="pic">&#xe63e;</string>
    <string name="video">&#xe61e;</string>
    <string name="exit">&#xe623;</string>


    <string name="action_settings">Settings</string>
    <string name="title">NFC P2P Communication</string>
    <string name="hint_message">Type a message to send</string>
    <string name="title_activity_reading_writing">ReadingWritingActivity</string>
    <string name="title_alert_dialog">What do you want to do with the tag?</string>
    <string name="write_button_label">Write</string>
    <string name="read_button_label">Read</string>
</resources>
