<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--
        背景
    -->
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <!--
        按钮
    -->

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="space_between"
        tools:context="com.myapp.activity.MainActivity"
        tools:ignore="MissingClass">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="column">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="当前设备名称："
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20dp" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexDirection="row"
        app:flexWrap="wrap"
        >

        <LinearLayout
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#80000000">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingHorizontal="20px"
                android:paddingVertical="20px"
                app:alignItems="center"
                app:flexDirection="column">

                <TextView
                    android:id="@+id/group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client"
                    android:textColor="#ffffff"
                    android:textSize="200px" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="  创建群组  "
                    android:textColor="#ffffff"
                    android:textSize="22dp"></Button>

            </com.google.android.flexbox.FlexboxLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btn_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#80000000">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingHorizontal="20px"
                android:paddingVertical="20px"
                app:alignItems="center"
                app:flexDirection="column">

                <TextView
                    android:id="@+id/delGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelLink"
                    android:textColor="#ffffff"
                    android:textSize="200px" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="  移除群组  "
                    android:textColor="#ffffff"
                    android:textSize="22dp"></Button>

            </com.google.android.flexbox.FlexboxLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/nfc_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#80000000">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingHorizontal="20px"
                android:paddingVertical="20px"
                app:alignItems="center"
                app:flexDirection="column">

                <TextView
                    android:id="@+id/nfc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nfc"
                    android:textColor="#ffffff"
                    android:textSize="200px" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="  nfc分享  "
                    android:textColor="#ffffff"
                    android:textSize="22dp"></Button>

            </com.google.android.flexbox.FlexboxLayout>
        </LinearLayout>
    </com.google.android.flexbox.FlexboxLayout>


    </com.google.android.flexbox.FlexboxLayout>
</RelativeLayout>
